--- a/css/resume.css
+++ b/css/resume.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Resume v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/resume)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
- */
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
@@ -12,7 +7,6 @@ body {
   body {
     padding-top: 0;
     padding-left: 17rem; } }
-
 h1,
 h2,
 h3,
@@ -20,9 +14,8 @@ h4,
 h5,
 h6 {
   font-family: 'Saira Extra Condensed', serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #343a40; }
+  font-weight: 500;
+  color: #495057; }
 
 h1 {
   font-size: 6rem;
@@ -84,25 +77,26 @@ h2 {
           display: block; }
           #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
             display: block; } }
-
 section.resume-section {
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 5px solid #BD5D38;
   padding-top: 5rem !important;
   padding-bottom: 5rem !important; }
-  section.resume-section .resume-item .resume-date {
-    min-width: none; }
+  section.resume-section .resume-item {
+    border-bottom: 2px solid #BD5D38;
+    padding-top: 2rem !important;
+    padding-bottom: 2rem !important; }
+    section.resume-section .resume-item .resume-date {
+      min-width: none; }
 
 @media (min-width: 768px) {
   section.resume-section {
     min-height: 100vh; }
     section.resume-section .resume-item .resume-date {
       min-width: 18rem; } }
-
 @media (min-width: 992px) {
   section.resume-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important; } }
-
 .bg-primary {
   background-color: #BD5D38 !important; }
 
@@ -113,3 +107,5 @@ a {
   color: #BD5D38; }
   a:hover, a:focus, a:active {
     color: #824027; }
+
+/*# sourceMappingURL=resume.css.map */
