--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -19,9 +19,9 @@ h4,
 h5,
 h6 {
   @include heading-font;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: $gray-800;
+  font-weight: 500;
+  // text-transform: uppercase;
+  color: $gray-700;
 }
 
 h1 {
