--- a/scss/_resume-item.scss
+++ b/scss/_resume-item.scss
@@ -1,8 +1,11 @@
 section.resume-section {
-  border-bottom: 1px solid $gray-300;
+  border-bottom: 5px solid $primary;
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
   .resume-item {
+    border-bottom: 2px solid $primary;
+    padding-top: 2rem !important;
+    padding-bottom: 2rem !important;
     .resume-content {}
     .resume-date {
       min-width: none;
